--- a/GardenPlot/GardenPlot/GardenPlot.csproj
+++ b/GardenPlot/GardenPlot/GardenPlot.csproj
@@ -44,9 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Garden.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Output.cs" />
     <Compile Include="Plot.cs" />
-    <Compile Include="PopulatedTestGarden.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
